--- a/regex_workspace_example/README.org
+++ b/regex_workspace_example/README.org
@@ -4,3 +4,13 @@
 :END:
 copy from
 https://rust-lang-nursery.github.io/rust-cookbook/text/regex.html
+
+** multi-threaded regex matching
+copy from [[https://morestina.net/blog/1827/multi-threaded-regex][Contention on multi-threaded regex matching]]
+
+#+begin_src rust
+for i in basic_regex_example rayon_regex_example thread_rayon_regex_example
+do
+ cargo run --bin $i
+done
+#+end_src
