--- a/tokio_workspace_example/tokio_stream_pin_example/README.org
+++ b/tokio_workspace_example/tokio_stream_pin_example/README.org
@@ -4,6 +4,8 @@
 :END:
 copy from [[https://tokio.rs/tokio/tutorial/streams][Streams]]
 
+** use std::pin::pin! to replace tokio::pin!
+
 #+begin_quote
 
 #+begin_quote
