update code and doc

--- a/rquickjs_workspace_example/README.org
+++ b/rquickjs_workspace_example/README.org
@@ -3,10 +3,8 @@
 ** run command
 
 #+begin_src shell
-cd native_module_example
 cargo build
 
-cd ../module_loader_example
-cargo build
+cd module_loader_example
 cargo run
 #+end_src
