add sqlx u256 bigdecimal example

--- a/sqlx_workspace_example/sqlx_u256_bigdecimal_example/README.org
+++ b/sqlx_workspace_example/sqlx_u256_bigdecimal_example/README.org
@@ -1,4 +1,4 @@
-* sqlx bigdecimal example
+* sqlx u256 bigdecimal example
 
 created by chatgpt
 
@@ -12,10 +12,4 @@ docker run --name my_postgres -e POSTGRES_PASSWORD=mypassword -d -p 5432:5432 po
 
 #+begin_src shell
 sqlx db create --database-url postgres://postgres:mypassword@localhost/chs-host
-
-mkdir migrations
-
-sqlx migrate add add_bigdecimal
-
-sqlx migrate run
 #+end_src
