--- a/sqlx_workspace_example/sqlx_u256_bigdecimal_example/README.org
+++ b/sqlx_workspace_example/sqlx_u256_bigdecimal_example/README.org
@@ -11,5 +11,7 @@ docker run --name my_postgres -e POSTGRES_PASSWORD=mypassword -d -p 5432:5432 po
 ** run sqlx
 
 #+begin_src shell
-sqlx db create --database-url postgres://postgres:mypassword@localhost/chs-host
+sqlx database create
+
+sqlx database drop
 #+end_src
