--- a/libp2p_workspace_example/libp2p_kademlia_example2/README.org
+++ b/libp2p_workspace_example/libp2p_kademlia_example2/README.org
@@ -16,4 +16,4 @@ cargo run --  "/ip4/127.0.0.1/tcp/8000"
 #+end_src
 
 copy from [[https://medium.com/lifefunk/playing-with-decentralized-p2p-network-rust-libp2p-stacks-2022abdf3503][Playing with decentralized p2p network & Rust Libp2p Stacks]]
-also see [[https://github.com/hiraqdev/poc-rust-libp2p-kademli]]a
+also see [[https://github.com/hiraqdev/poc-rust-libp2p-kademlia]]
