--- a/libp2p_workspace_example/libp2p_perf_example/README.org
+++ b/libp2p_workspace_example/libp2p_perf_example/README.org
@@ -21,5 +21,7 @@ cargo build
 *** client
 
 #+begin_src shell
-../target/debug/libp2p_perf_example --server-address '127.0.0.1:8080' --transport tcp --upload-bytes 104857600 --download-bytes 104857600
+../target/debug/libp2p_perf_example --server-address '127.0.0.1:8080' --transport tcp \
+  --upload-bytes 104857600 \
+  --download-bytes 104857600
 #+end_src
