--- a/solana_workspace_example/solana_program_hello_example/README.org
+++ b/solana_workspace_example/solana_program_hello_example/README.org
@@ -1,7 +1,7 @@
 * build command
 
 #+begin_src shell
-cargo-build-bpf
+cargo-build-sbf
 
-solana program deploy ../target/deploy/solana_program_hello_example.so
+solana program deploy ../target/sbf-solana-solana/release/solana_program_hello_example.so
 #+end_src
