--- a/libp2p_workspace_example/libp2p_tuono_a_example/TODO.org
+++ b/libp2p_workspace_example/libp2p_tuono_a_example/TODO.org
@@ -2,3 +2,4 @@
 
 - [ ] openraft use libp2p, see https://github.com/renegade-fi/renegade
 - [ ] tuono use openraft state, see https://tuono.dev/documentation/application-state
+- [ ] modify libp2p code by using https://github.com/libp2p/rust-libp2p/blob/c34a77bae7a877fbc9a691f8a0ef23c127dca7d7/examples/file-sharing/src/network.rs
